# hacknigt

EcosystemIntelligence/: requirements.txt
EcosystemIntelligence/EcosystemIntelligence/: app.py  pyproject.toml
EcosystemIntelligence/EcosystemIntelligence/data/: sample_coordinates.py
EcosystemIntelligence/EcosystemIntelligence/models/: energy_model.py  housing_model.py  population_model.py
EcosystemIntelligence/EcosystemIntelligence/utils/: analysis_utils.py  energy_utils.py  map_utils.py  visualization_utils.py
land/: LandCover.ipynb  Untitled-1.ipynb  Untitled-2.ipynb  Untitled-3.ipynb  Untitled-4.ipynb  Untitled-5.ipynb
water_data/: requirements.txt  streamlit_app.py  water_quality_analysis.py
